# sttai-mcp

./: .gitignore  README.md  pyproject.toml
sttai_mcp/: __init__.py  server.py
