[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sttai-mcp"
version = "0.1.0"
description = "Model Context Protocol server for STT.ai — transcribe URLs, list/search transcripts, summarize, analyze, generate, and chat with transcripts from Claude Desktop / Cursor / any MCP client."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "STT.ai", email = "hello@stt.ai" },
]
keywords = [
    "mcp", "model-context-protocol", "stt", "speech-to-text",
    "transcription", "whisper", "claude", "anthropic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "sttai>=0.1.0",
]

[project.urls]
Homepage = "https://stt.ai"
Repository = "https://github.com/sttaigit/sttai-mcp"
Documentation = "https://github.com/sttaigit/sttai-mcp#readme"
Issues = "https://github.com/sttaigit/sttai-mcp/issues"

[project.scripts]
sttai-mcp = "sttai_mcp.server:main"

[tool.setuptools.packages.find]
include = ["sttai_mcp*"]
